# DevUtils-Base

./: DevUtils-Base.cabal  README.md
etc/Cloud/Amazon/Pricing/: Data-Transfer.json  EBS-Optimised.json  EBS.json  EBS.json.new  EC2-Linux-DI-OnDemand.json  EC2-Linux-DI-RI-Heavy.json  EC2-Linux-DI-RI-Light.json  EC2-Linux-DI-RI-Medium.json  EC2-Linux-OnDemand-Legacy.json  EC2-Linux-OnDemand.json  EC2-Linux-RI-Heavy-Legacy.json  EC2-Linux-RI-Heavy.json  EC2-Linux-RI-Light-Legacy.json  EC2-Linux-RI-Light.json  EC2-Linux-RI-Medium.json  ElastiCache-Cleaned-RI-Heavy-Standard.json  ElastiCache-Cleaned-RI-Medium-Standard.json  ElastiCache-Cleaned-Standard.json  ElastiCache-Heavy-Standard.json  ElastiCache-Light-Standard.json  ElastiCache-Medium-Standard.json  ElastiCache.json  ElasticCache-Cleaned-RI-Light-Standard.json  ElasticCache-Cleaned-Standard.json  RDS-MySQL-Reserved-Heavy.json  RDS-MySQL-Reserved-Medium.json  RDS-MySQL-Reserved.json  RDS-MySQL-Standard.json  S3.json  grab.sh  jsonp.js
etc/Cloud/Amazon/Pricing/tmp/: ec-ri-heavy.js  ec-ri-light.js  ec-ri-medium.js  ec-standard.js
src/System/DevUtils/: Base.hs
src/System/DevUtils/Base/: Currency.hs  Misc.hs  Network.hs  Url.hs
src/System/DevUtils/Base/Cloud/: Amazon.hs
src/System/DevUtils/Base/Cloud/Amazon/: .EBS.hs.swp  EBS.hs  EC2.hs  ElastiCache.hs  ElasticCache.hs  Misc.hs  RDS.hs  README.md  S3.hs
src/System/DevUtils/Base/Cloud/Amazon/EC2/: Reserved.hs
src/System/DevUtils/Base/Cloud/Amazon/ElastiCache/: Reserved.hs
src/System/DevUtils/Base/Cloud/Amazon/ElasticCache/: Reserved.hs
src/System/DevUtils/Base/Cloud/Amazon/RDS/: Reserved.hs
src/System/DevUtils/Base/Control/: Monad.hs
src/System/DevUtils/Base/Data/: List.hs  Map.hs
src/System/DevUtils/Base/Finance/: Misc.hs
src/System/DevUtils/Base/Url/: Auth.hs  Connection.hs  Field.hs  File.hs  Memcache.hs  MySQL.hs  Redis.hs  Session.hs  Ssh.hs  UberLog.hs  WWW.hs  ZMQ.hs
