name:                DevUtils-Base
version:             0.1.0.0
synopsis:            Base DevUtils library
homepage:            https://github.com/adarqui/DevUtils-Base
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.Base.Url.Auth
   System.DevUtils.Base.Url.Connection
   System.DevUtils.Base.Url.Field
   System.DevUtils.Base.Url.File
   System.DevUtils.Base.Url.Redis
   System.DevUtils.Base.Url.Session
   System.DevUtils.Base.Url.Ssh
   System.DevUtils.Base.Url.ZMQ
   System.DevUtils.Base.Misc
   System.DevUtils.Base.Control.Monad
   System.DevUtils.Base.Data.List
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src
