name:                DevUtils-Base
version:             0.1.0.0
synopsis:            Base DevUtils library
homepage:            https://github.com/adarqui/DevUtils-Base
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:

   System.DevUtils.Base

   System.DevUtils.Base.Url
   System.DevUtils.Base.Url.Auth
   System.DevUtils.Base.Url.Connection
   System.DevUtils.Base.Url.Field
   System.DevUtils.Base.Url.File
   System.DevUtils.Base.Url.Redis
   System.DevUtils.Base.Url.MySQL
   System.DevUtils.Base.Url.Session
   System.DevUtils.Base.Url.Ssh
   System.DevUtils.Base.Url.ZMQ

   System.DevUtils.Base.Misc
   System.DevUtils.Base.Control.Monad
   System.DevUtils.Base.Data.List
   System.DevUtils.Base.Data.Map

   System.DevUtils.Base.Network

   System.DevUtils.Base.Cloud.Amazon
   System.DevUtils.Base.Cloud.Amazon.EC2
   System.DevUtils.Base.Cloud.Amazon.EC2.Reserved
   System.DevUtils.Base.Cloud.Amazon.ElastiCache
   System.DevUtils.Base.Cloud.Amazon.ElastiCache.Reserved
   System.DevUtils.Base.Cloud.Amazon.EBS
   System.DevUtils.Base.Cloud.Amazon.RDS
   System.DevUtils.Base.Cloud.Amazon.RDS.Reserved
   System.DevUtils.Base.Cloud.Amazon.S3
   System.DevUtils.Base.Cloud.Amazon.Misc

   System.DevUtils.Base.Currency
   System.DevUtils.Base.Finance.Misc

  build-depends:       base >= 4.6, HUnit >= 1.2.5.0, containers >= 0.5.5.1, bytestring, aeson, network
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src
